--- a/src/styles/ImageUpload.css
+++ b/src/styles/ImageUpload.css
@@ -35,4 +35,28 @@
   }
 
   .resultSection {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5em
+  }
+
+  .resultSection2 {
+    margin-top: 1em;
+    background-color: #0a0a23;
+    color: gainsboro;
+    border-radius: 10px;
+    padding: 1em;
+  }
+
+  ul {
+    line-height: 1.5em;
+    padding: 1em;
+    margin: 0;
+  }
+
+  li {
+      margin: 1em;
   }
