--- a/src/styles/ImageUpload.css
+++ b/src/styles/ImageUpload.css
@@ -1,10 +1,11 @@
-.header {
+header {
     text-align: center;
     text-transform: uppercase;
     padding: 32px;
     background-color: #0a0a23;
     color: whitesmoke;
     border-bottom: 4px solid #fdb347;
+    cursor: pointer;
   }
   
   .uploadSection {
@@ -49,6 +50,8 @@
     color: gainsboro;
     border-radius: 10px;
     padding: 1em;
+    min-width: 35vw;
+    max-width: 50vw;
   }
 
   ul {
@@ -60,3 +63,22 @@
   li {
       margin: 1em;
   }
+
+  .ulul {
+    line-height: 0.5em;
+    padding: 0;
+  }
+
+  .loaderContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 9999;
+  }
+  
